# context-watch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_tests.py
contextwatch/: __init__.py  analyzer.py  cli.py  inference_loop.py  reporter.py  utils.py
contextwatch/core/: __init__.py  hf_adapter.py  vllm_adapter.py
contextwatch/monitor/: __init__.py  advisor.py  context_tracker.py  forecaster.py  latency_tracker.py  memory_tracker.py
contextwatch/ui/: __init__.py  streamlit_app.py
examples/: validate.py
tests/: __init__.py  test_advisor_unit.py  test_context_tracker_unit.py  test_latency.py  test_long_prompt.py  test_memory.py  test_reporter_unit.py  test_small_prompt.py  test_vllm_adapter_unit.py
