[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextwatch"
version = "0.6.0"
description = "CLI tool for controlled LLM inference with real-time context, memory, and latency monitoring."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["llm", "inference", "monitoring", "context-window", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "transformers",
    "psutil",
    "matplotlib",
]

[project.optional-dependencies]
rich = ["rich"]

[project.scripts]
contextwatch = "contextwatch.cli:main"
